do not try to use equal field from outer query as field of local join (BUG#6384)